[gd_scene load_steps=23 format=3 uid="uid://cahno8aso5net"]

[ext_resource type="Script" uid="uid://chf7wcejruxv5" path="res://scenes/battle/battle.gd" id="1_4s751"]
[ext_resource type="PackedScene" uid="uid://d0efyathkfg74" path="res://scenes/enemy/enemy.tscn" id="2_02s5s"]
[ext_resource type="Script" uid="uid://ypfceqw8upfm" path="res://scenes/ui/hand.gd" id="2_uaw60"]
[ext_resource type="PackedScene" uid="uid://2n4lap6w3pde" path="res://scenes/player/player.tscn" id="3_dpj45"]
[ext_resource type="AudioStream" uid="uid://crlpvw8d52kvw" path="res://art/八方.mp3" id="3_sgdsx"]
[ext_resource type="PackedScene" uid="uid://dwt63vvppukag" path="res://scenes/card_target_selector/card_target_selector.tscn" id="3_vyv1n"]
[ext_resource type="Script" uid="uid://d2b07tgf1uiox" path="res://scenes/enemy/enemy_handler.gd" id="4_41vpn"]
[ext_resource type="Resource" uid="uid://sbkc4o401k4l" path="res://characters/warrior/warrior.tres" id="4_fwb8a"]
[ext_resource type="Texture2D" uid="uid://crv8ejmqf06qa" path="res://art/场景/BigBirdArrived.png" id="4_sgdsx"]
[ext_resource type="Resource" uid="uid://bnmpwl3k8qb8n" path="res://enemies/crab/crab_enemy.tres" id="5_5flmk"]
[ext_resource type="Script" uid="uid://bmcbefadpsadb" path="res://scenes/ui/battle_ui.gd" id="7_18vit"]
[ext_resource type="Script" uid="uid://bisce32pxmw6p" path="res://scenes/player/player_handler.gd" id="8_3di7i"]
[ext_resource type="Resource" uid="uid://bbo24od4aavfj" path="res://enemies/bat/bat_enemy.tres" id="8_d4c2d"]
[ext_resource type="PackedScene" uid="uid://bnbwu7pkbrwox" path="res://scenes/ui/mana_ui.tscn" id="11_2vu01"]
[ext_resource type="PackedScene" uid="uid://chry0sgk7t0yf" path="res://scenes/ui/tooltip.tscn" id="12_qx741"]
[ext_resource type="PackedScene" uid="uid://cpwswceawk1b0" path="res://scenes/ui/Soul_ui.tscn" id="15_5moxy"]
[ext_resource type="Script" uid="uid://cuykj2y3ipbie" path="res://scenes/ui/red_flash.gd" id="15_qvh8t"]
[ext_resource type="PackedScene" uid="uid://dx377oa3pkut" path="res://scenes/ui/card_pile_opener.tscn" id="17_djv03"]
[ext_resource type="PackedScene" uid="uid://dfig8d63ggof1" path="res://scenes/ui/battle_over_panel.tscn" id="17_xrby7"]
[ext_resource type="Texture2D" uid="uid://c7c8cgkuro8b3" path="res://art/discard.png" id="18_g47ei"]
[ext_resource type="PackedScene" uid="uid://d2jq2r5hb1ajk" path="res://scenes/ui/card_pile_view.tscn" id="21_rnul2"]
[ext_resource type="PackedScene" uid="uid://c3fu2yk5vm3qb" path="res://scenes/ui/status_view.tscn" id="22_kfjwu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xyg5u"]
size = Vector2(256, 100)

[node name="Battle" type="Node2D"]
script = ExtResource("1_4s751")
char_stats = ExtResource("4_fwb8a")
music = ExtResource("3_sgdsx")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.321569, 0.321569, 0.321569, 1)
scale = Vector2(1.875, 1.65138)
texture = ExtResource("4_sgdsx")
centered = false

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(960, 375)
scale = Vector2(7.5, 7.5)
shape = SubResource("RectangleShape2D_xyg5u")
debug_color = Color(0, 0.6, 0.701961, 0.117647)

[node name="EnemyHandler" type="Node2D" parent="."]
script = ExtResource("4_41vpn")

[node name="BatEnemy" parent="EnemyHandler" instance=ExtResource("2_02s5s")]
position = Vector2(1352, 538)
stats = ExtResource("8_d4c2d")

[node name="CrabEnemy" parent="EnemyHandler" instance=ExtResource("2_02s5s")]
position = Vector2(1525, 684)
stats = ExtResource("5_5flmk")

[node name="BatEnemy2" parent="EnemyHandler" instance=ExtResource("2_02s5s")]
position = Vector2(1679, 541)
stats = ExtResource("8_d4c2d")

[node name="Player" parent="." instance=ExtResource("3_dpj45")]
position = Vector2(338, 636)
stats = ExtResource("4_fwb8a")

[node name="CardTargetSelector" parent="." instance=ExtResource("3_vyv1n")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("player", "hand") groups=["player_handler"]]
script = ExtResource("8_3di7i")
player = NodePath("../Player")
hand = NodePath("../BattleUI/Hand")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("7_18vit")

[node name="Hand" type="HBoxContainer" parent="BattleUI" node_paths=PackedStringArray("player")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -597.0
offset_top = -302.0
offset_right = 603.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1
script = ExtResource("2_uaw60")
player = NodePath("../../Player")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("11_2vu01")]
offset_left = 10.0
offset_top = -294.0
offset_right = 149.0
offset_bottom = -219.0

[node name="SoulUI" parent="BattleUI" instance=ExtResource("15_5moxy")]
offset_left = 10.0
offset_top = -880.0
offset_right = 147.0
offset_bottom = -816.0

[node name="Tooltip" parent="BattleUI" instance=ExtResource("12_qx741")]
offset_left = -69.5
offset_top = 189.0
offset_right = 78.5
offset_bottom = 337.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -205.0
offset_top = -287.0
offset_right = -6.0
offset_bottom = -225.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
disabled = true
text = "回合结束"

[node name="DrawPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("17_djv03")]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -84.0
offset_right = 85.0
offset_bottom = -4.0
grow_vertical = 0
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DrawPileButton"]
layout_mode = 0
offset_left = 114.0
offset_top = 99.0
offset_right = 147.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 20
text = "99"
horizontal_alignment = 1

[node name="DiscardPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("17_djv03")]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -84.0
offset_right = -5.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("18_g47ei")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DiscardPileButton"]
layout_mode = 0
offset_left = -25.0
offset_top = 99.0
offset_right = 8.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 20
text = "99"
horizontal_alignment = 1

[node name="ExcardPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("17_djv03")]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -84.0
offset_right = -5.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("18_g47ei")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/ExcardPileButton"]
layout_mode = 0
offset_left = -25.0
offset_top = 99.0
offset_right = 8.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 20
text = "99"
horizontal_alignment = 1

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
visible = false
script = ExtResource("15_qvh8t")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.443137, 0.443137, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.1
one_shot = true

[node name="BattleOverLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="BattleOverPanel" parent="BattleOverLayer" instance=ExtResource("17_xrby7")]
visible = false

[node name="CardPileViews" type="CanvasLayer" parent="."]
layer = 4

[node name="DrawPileView" parent="CardPileViews" instance=ExtResource("21_rnul2")]
unique_name_in_owner = true
visible = false

[node name="DiscardPileView" parent="CardPileViews" instance=ExtResource("21_rnul2")]
unique_name_in_owner = true
visible = false

[node name="ExcardPileView" parent="CardPileViews" instance=ExtResource("21_rnul2")]
unique_name_in_owner = true
visible = false

[node name="StatusViewLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="StatusView" parent="StatusViewLayer" instance=ExtResource("22_kfjwu")]
visible = false

[node name="FlipButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 0)
offset_top = 466.0
offset_right = 168.0
offset_bottom = 554.0
theme_override_font_sizes/font_size = 35

[node name="FlipWorld" type="TextureRect" parent="FlipButton"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
